# daisyproducer

./: .dockerignore  .gitignore  AUTHORS  Dockerfile  INSTALL.org  INSTALL.rst  Makefile  Makefile.am  README  README.org  README.rst  _config.yml  configure.ac  daisyproducer.wsgi  index.md  logger.py  logging.conf  manage.py  migration_proposal.org  settings.py  settings_common.py  settings_prod.py  settings_production.py  settings_test.py  settings_unittest.py  settings_unittest_with_coverage.py  test.sh  test_with_coverage.sh  urls.py  utils.py  version.py
_layouts/: front.html
abacus_import/management/commands/: importABACUS.py  importProductData.py
abacus_import/misc/: activity.uxf
abacus_import/misc/cron.d/: daisyproducerImportABACUSProductData
abacus_import/schema/: abacus_export.rnc  abacus_export.rng
abacus_import/xslt/: fixMetaData.xsl
apache/: README  demo.xmlp.sbszh.ch  deploy-utils.sh  deploy.sh  updateDaisyProducer.sh
daisyproducer/: .gitignore  .project  .pydevproject  Makefile.am  __init__.py  daisyproducer.wsgi  logger.py  logging.conf  settings.py  settings_common.py  settings_unittest.py  urls.py  version.py
daisyproducer/abacus_import/misc/: .gitignore  Makefile  activity.uxf  activityDiagram.txt  restclient
daisyproducer/abacus_import/samples/: SN_Alfresco_EB11111.xml  SN_Alfresco_PS13060.xml  SN_Alfresco_PS99999.xml
daisyproducer/abacus_import/schema/: abacus_export.rnc  abacus_export.rng
daisyproducer/abacus_import/xslt/: fixMetaData.xsl
daisyproducer/apache/: demo.xmlp.sbszh.ch
daisyproducer/dictionary/: admin.py  brailleTables.py  forms.py  models.py  views.py
daisyproducer/dictionary/migrations/: 0001_initial.py  0002_auto_20170403_1737.py  0005_auto__add_field_word_isLocal__add_field_word_source__add_field_word_ho.py  (+5 more)
daisyproducer/doc/: stateMachine.dot
daisyproducer/documents/: external.py  forms.py  models.py  storage.py  tests.py  versionHelper.py
daisyproducer/statistics/: models.py  views.py
daisyproducer/templates/: 500.html  DTBookTemplate.xml  Makefile.am  base.html  error.html  jobrequest.xml
dictionary/: admin.py  brailleTables.py  forms.py  importExport.py  models.py  views.py
dictionary/migrations/: 0001_initial.py  0002_auto__del_unique_word_untranslated__add_unique_word_isConfirmed_untran.py  0003_auto.py  0004_auto.py  0006_auto__del_field_word_source.py  0007_auto__add_field_word_modified_by__add_field_word_created_at__add_field.py  0009_auto__del_field_word_modified_by__del_field_word_created_at__del_field.py  0010_auto__add_field_word_document__del_unique_word_grade_isConfirmed_homog.py  0012_auto__del_word__del_unique_word_untranslated_type_grade_homograph_disa.py  0013_vertical_partition_dictionary_words.py  0014_auto__del_word__del_unique_word_untranslated_type_grade_homograph_disa.py  0015_auto.py  0017_auto__add_field_localword_isDeferred.py
dictionary/misc/: 01_Erneuerungen DBK ß-Schreibung.txt  02_Whitelist Corrections.txt  03_Whitelist Corrections (grade 2).txt  cron.hourly
dictionary/xslt/: filter.xsl  filter_names.xsl
doc/: .gitignore  Makefile  Makefile.am  container_diagram.txt  container_diagram_with_braille_corpus.txt  context_diagram.txt  stateMachine.dot  state_diagram.txt
doc/help/: .gitignore  Makefile.am  about.txt  about.txt.in  index.txt  index.txt.in
documents/: Makefile.am  admin.py  createViews.py  external.py  forms.py  models.py  stateMachine.py  storage.py  tests.py  versionContent.py  versionHelper.py  views.py
documents/fixtures/: state.yaml  user.yaml
documents/migrations/: 0003_auto__add_field_document_production_source.py  0005_auto__add_image__add_field_largeprintprofile_end_notes.py
documents/pipeline2/: client.py  rest.py
documents/schema/: brl.xsd  dtbook-2005-3-sbs-braille.rng  dtbook-2005-3-sbs-continuation.rng  dtbook-2005-3-sbs-full.rng  dtbook-2005-3-sbs-full.sch.xsl  dtbook-2005-3-sbs-minimal.rng  dtbook-2005-3-sbs.rng  dtbook-2005-3.rng  dtbook-2005-SBS.sch.xsl  minimalSchema.rng  minimalSchema.xsd  xml.xsd
documents/sql/: state.sql  state.sqlite3.sql
documents/templatetags/: Makefile.am  basename.py
documents/test/: Makefile.am
documents/views/: browse.py  consume.py  manage.py  metaData.py  todo.py  utils.py
documents/xslt/: addBoilerplate.xsl  addEmptyHeaders.xsl  dtbook2sbsform.xsl  dtbook2sbsforms.xsl  filterBrlContractionhints.xsl  filterEmptyTOC.xsl  filterLinenumSpans.xsl  filterProcessingInstructions.xsl  insertVolumeSplitPoints.xsl
erp/samples/: SN_Alfresco_GD10736.xml  SN_Alfresco_GD10968.xml  SN_Alfresco_GD11208.xml  SN_Alfresco_GD11463.xml  SN_Alfresco_PS11113.xml  SN_Alfresco_PS12574.xml  SN_Alfresco_PS12687.xml
erp/schema/: .gitignore  Makefile  abacus_export.rnc
integration/schema/: abacus_export.rnc
misc/: README  updateDaisyProducer.sh
public/stylesheets/: application.css  demo_table.css
statistics/: views.py
statistics/migrations/: 0001_initial.py
templates/: DTBookTemplate.xml  base.html  help.html  jobrequest.xml  login.html
templates/dictionary/: confirm.html  confirm_conflicting_duplicates.html  confirm_single.html  edit_globals.html  edit_missing_globals.html  import.html  index.html  local.html  pagination.html  upload.html  words.html
templates/documents/: browse.html  browse_detail.html  browse_index.html  consume.html  consume_detail.html  consume_index.html  create.html  detail.html  documentDetails.html  index.html  manage.html  manage_create.html  manage_detail.html  manage_import_metadata_csv.html  manage_index.html  manage_update.html  manage_upload_metadata_csv.html  metaData.html  metaData_create.html  metaData_detail.html  metaData_index.html  metaData_update.html  simpleForm.html  simpleTableForm.html  todo.html  todo_detail.html  todo_dtb.html  todo_epub.html  todo_index.html  todo_markup.html  todo_markup_xopus.html  todo_ocr.html  todo_odt.html  todo_pdf.html  todo_rtf.html  todo_sale_pdf.html  todo_sbsform.html  todo_text_only_dtb.html  todo_text_only_fileset.html
templates/statistics/: stats_index.html
web/: Makefile.am  index.org  org-export-settings.el  org.css
(+128 files in other folders)
