AC_INIT([daisyproducer], [0.3])
AM_INIT_AUTOMAKE([foreign])

AM_PATH_PYTHON

AC_CONFIG_FILES([
	Makefile
	doc/Makefile
	doc/help/Makefile
	documents/Makefile
	documents/templatetags/Makefile
	documents/views/Makefile
	documents/test/Makefile
	documents/test/functional/Makefile
	templates/Makefile
	templates/documents/Makefile
])

AC_OUTPUT
